chore: add swagger docs
