# app/controller/book.go
@@ -38,6 +38,7 @@ func NewBookController(s search.BookSearch, svc service.BookService) BookControl
 // @Description 사용자가 등록한 모든 책을 조회하는 API. TODO: 읽을책/완독 구분해 가져오게 할 예정
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Bearer 570d33ca-bd5c-4019-9192-5ee89229e8ec"
 // @Param userId query string true "abcd-efgh-1234"
 // @Success 200 {object} []entity.Book
 // @Router /books [get]
@@ -59,6 +60,7 @@ func (b bookController) FetchAll(c echo.Context) error {
 // @Description ISBN으로 책의 상세 내용을 조회하는 API
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Bearer 570d33ca-bd5c-4019-9192-5ee89229e8ec"
 // @Param bookId path string true "12345678"
 // @Success 200 {object} entity.Book
 // @Router /books/{bookId} [get]
@@ -95,6 +97,7 @@ func (b bookController) Search(c echo.Context) error {
 // @Description 책의 ISBN, 제목, userId를 body로 제공하면 읽을책으로 등록하는 API
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "Bearer 570d33ca-bd5c-4019-9192-5ee89229e8ec"
 // @Param request body CreateBookParam true "CreateBookParam{}"
 // @Success 201 {object} entity.Book
 // @Router /books [post]
