# docs/swagger.yaml
@@ -122,6 +122,11 @@ paths:
       - application/json
       description: '사용자가 등록한 모든 책을 조회하는 API. TODO: 읽을책/완독 구분해 가져오게 할 예정'
       parameters:
+      - description: Bearer
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: abcd-efgh-1234
         in: query
         name: userId
@@ -255,16 +260,38 @@ paths:
       summary: 메모 추가 API
       tags:
       - memo
-  /user:
-    post:
+  /users:
+    get:
       consumes:
       - application/json
-      description: API를 호출하면 UUID를 발급함. local storage에 저장해두고 userId로 사용하면 됨.
+      description: Authorization header의 bearer token을 이용해 사용자를 조회함
+      parameters:
+      - description: Bearer
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.User'
+      summary: 사용자 조회 API
+      tags:
+      - user
+  /users/token:
+    get:
+      consumes:
+      - application/json
+      description: API를 호출하면 UUID를 token으로 발급함. local storage에 저장해두고 userId로 사용하면
+        됨.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/entity.User'
       summary: 사용자 추가 API
